--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Parallax Website Demo</title>
 	<link rel="stylesheet" href="css/style.css">
 	</head>
@@ -23,7 +25,7 @@
 
 	<div class="pimg2">
 		<div class="ptext">
-			<span class="border">
+			<span class="border trans">
 				Image Two Text
 			</span>
 		</div>
@@ -38,7 +40,7 @@
 
 	<div class="pimg3">
 		<div class="ptext">
-			<span class="border">
+			<span class="border trans">
 				Image Three Text
 			</span>
 		</div>
